Trying to fix paragraph shifting after page transition in about page

--- a/killstreak/src/styles/scss/About/About.scss
+++ b/killstreak/src/styles/scss/About/About.scss
@@ -1,8 +1,7 @@
 
 
 .About {  
-  background:red;
-  min-height:100vh;  
+  background:red;  
 
   .header {
     position:relative;
@@ -43,7 +42,7 @@
     width:50%;
     margin:auto;
     font-family:gothic;
-    padding-bottom:100px;    
+    padding-bottom:100px;
   }
 
 }
